--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.11.1",
+    "@vercel/node": "^1.14.0",
+    "axios": "^0.26.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "@types/serverless": "^3.0.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "prisma": "^3.11.1",
     "typescript": "4.6.2"
   }
 }
