adding env prod

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-DATABASE_URL_PROD='mysql://40ildx1c07hl:pscale_pw_USoBovsYckGBGVnbPPH9dQSAGV-_z23yFz53NadSNKk@z0jtkj04u76m.us-east-4.psdb.cloud/tallow-comics?sslaccept=strict'
+DATABASE_URL_PROD='mysql://mum3q3ra29a4:pscale_pw_5neGGOoxVLJE3lRpantQBihcfGu9FfBvGt8OnoQST3A@z0jtkj04u76m.us-east-4.psdb.cloud/tallow-comics?sslaccept=strict'
