--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dependencies
-/node_modules
+/node_modules/
 /.pnp
 .pnp.js
 
@@ -9,6 +9,7 @@
 # next.js
 /.next/
 /out/
+.next/
 
 # production
 /build
@@ -31,7 +32,7 @@ yarn-error.log*
 .env.production.local
 
 # vercel
-.vercel
+.vercel/
 
 # typescript
 *.tsbuildinfo
