--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@prisma/client": "^3.11.1",
     "@vercel/node": "^1.14.0",
-    "axios": "^0.26.1",
     "concurrently": "^7.0.0",
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
