--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://71ttjc3x2zk8:pscale_pw_wlLkQ1dJQSTXCpJYe4KWoHTbzjbDpIBqptRXTHMPcTA@z0jtkj04u76m.us-east-4.psdb.cloud/tallow-comics?sslaccept=strict"
+DATABASE_URL="mysql://nj6b7i8wlwog:pscale_pw_Ciw4byJXnZC6ot_cU3oFloyMSAhiRtA4D6u_dzKAkPA@z0jtkj04u76m.us-east-4.psdb.cloud/tallow-comics?sslaccept=strict"
