--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:prisma": "yarn prisma generate",
-    "start:dev": "yarn dev",
-    "start": "yarn concurrently yarn:start:*",
+    "start": "yarn && yarn prisma generate && yarn dev",
     "dev": "next dev"
   },
   "dependencies": {
     "@prisma/client": "^3.11.1",
     "@vercel/node": "^1.14.0",
-    "concurrently": "^7.0.0",
     "date-fns": "^2.28.0",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
