--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,22 @@ version: "2.3.3"
 
 services:
   tallowcomics:
+    container_name: 'tallowapp'
+    image: "node:16.14.2"
     build: .
     command: 'yarn start'
     ports:
       - "3000:3000"
     volumes:
       - .:/usr/tallowcomics
+
+  db:
+    container_name: 'database-mysl'
+    image: mysql:5.7.31
+    command: --default-authentication-plugin=mysql_native_password --sql_mode=NO_ENGINE_SUBSTITUTION,NO_AUTO_CREATE_USER --explicit_defaults_for_timestamp
+    restart: always
+    ports:
+      - "3308:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - TZ=America/Sao_Paulo
