--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "yarn && yarn prisma migrate dev create-comics && yarn next dev",
+    "start": "yarn",
+    "migrate": "yarn prisma migrate dev --name create-comics",
     "dev": "next dev"
   },
   "dependencies": {
-    "@prisma/client": "^3.11.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.3",
+    "@prisma/client": "^3.13.0",
     "@vercel/node": "^1.14.0",
     "date-fns": "^2.28.0",
     "next": "12.1.0",
@@ -24,7 +28,7 @@
     "@types/serverless": "^3.0.1",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
-    "prisma": "^3.11.1",
+    "prisma": "^3.13.0",
     "typescript": "4.6.2"
   }
 }
